<resources>
    <string name="app_name">MyTimesheet</string>
    <string name="tv_title">"Gestor de horas TIMESHEET"</string>
    <string name="dni_data">"Ingrese su DNI"</string>
    <string name="txt_password">"Ingrese su clave"</string>
    <string name="bt_ingresar">"Ingresar"</string>
    <string name="tv_sign">"Sign in"</string>
    <string name="txt_recupera">"¿Olvidó sus credenciales?"</string>

    <string name="btn_agregar">"Agregar registro"</string>
    <string name="tv_cambiarclave">"Actualizar la clave de sus credenciales"</string>


    <string name="user_name">"Bienvenido Usuario"</string>
    <string name="ibt_salir">"Salir"</string>
    <string name="bt_registro">"Registro de horas"</string>
    <string name="bt_reporte">"Consultar registro de horas"</string>

    <string name="ibt_calendar">"Calendario"</string>
    <string name="tv_fecha">"Seleccionar Fecha"</string>

    <string name="bt_guardar">"Guardar"</string>
    <string name="tv_controlh">"Registro de horas"</string>
    <string name="tv_proyecto">"Proyecto"</string>
    <string name="tv_horas">"Horas"</string>
    <string name="tv_addproy">"ListaProyecto"</string>

    <string name="tv_credenciales">"Coloca los datos para recuperar tus credenciales"</string>
    <string name="et_usuario">"Usuario"</string>
    <string name="et_correo">"Ingresa el correo"</string>
    <string name="bt_enviar">"Recuperar"</string>

    <string name="tv_altausuario">"Colocar el DNI para registrar al nuevo usuario"</string>
    <string name="tv_registraActividad">"Registra"</string>


    <string name="tv_consulta">"Consulta registro de horas"</string>
    <string name="etd_fecini">"Fecha inicio"</string>
    <string name="etd_fecfin">"Fecha fin"</string>
    <string name="bt_genreporte">"Generar Reporte"</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>

    <string name="et_codigoProyecto">"Ingresa codigo Proyecto"</string>

</resources>