<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ReporteHoras">

    <TextView
        android:id="@+id/tv_controlh2"
        android:layout_width="309dp"
        android:layout_height="57dp"
        android:layout_marginStart="50dp"
        android:layout_marginTop="60dp"
        android:layout_marginEnd="50dp"
        android:text="@string/tv_controlh"
        android:textAlignment="center"
        android:textSize="24sp"
        android:textStyle="italic"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/constraintLayout" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout"
        android:layout_width="match_parent"
        android:layout_height="116dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/tv_name"
            android:layout_width="283dp"
            android:layout_height="26dp"
            android:layout_marginStart="4dp"
            android:layout_marginTop="68dp"
            android:layout_marginEnd="32dp"
            android:text="@string/user_name"
            app:layout_constraintEnd_toStartOf="@+id/ibt_menu3"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageButton
            android:id="@+id/ibt_menu3"
            android:layout_width="49dp"
            android:layout_height="55dp"
            android:layout_marginStart="48dp"
            android:layout_marginTop="28dp"
            android:contentDescription="@string/ibt_salir"
            android:onClick="Menu"
            app:layout_constraintStart_toEndOf="@+id/tv_name"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/menu_2" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <Button
        android:id="@+id/bt_genreporte"
        android:layout_width="155dp"
        android:layout_height="56dp"
        android:layout_marginStart="100dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="100dp"
        android:layout_marginBottom="40dp"
        android:onClick="ejecutaconsulta"
        android:text="@string/bt_genreporte"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etd_fecfin" />

    <EditText
        android:id="@+id/etd_fecini"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="100dp"
        android:layout_marginTop="20dp"
        android:clickable="true"
        android:ems="10"
        android:focusable="false"
        android:hint="@string/etd_fecini"
        android:inputType="date"
        android:maxLines="1"
        android:minHeight="48dp"
        app:layout_constraintBottom_toTopOf="@+id/etd_fecfin"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_controlh2" />

    <EditText
        android:id="@+id/etd_fecfin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="100dp"
        android:layout_marginBottom="40dp"
        android:clickable="true"
        android:ems="10"
        android:focusable="false"
        android:hint="@string/etd_fecfin"
        android:inputType="date"
        android:maxLines="1"
        android:minHeight="48dp"
        app:layout_constraintBottom_toTopOf="@+id/bt_genreporte"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etd_fecini" />
</androidx.constraintlayout.widget.ConstraintLayout>