<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".GestorClientes">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout"
        android:layout_width="404dp"
        android:layout_height="96dp"
        android:layout_marginBottom="12dp"
        app:layout_constraintBottom_toTopOf="@+id/btn_AddOne"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/tv_name"
            android:layout_width="306dp"
            android:layout_height="28dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="52dp"
            android:layout_marginEnd="24dp"
            android:text="@string/user_name"
            app:layout_constraintEnd_toStartOf="@+id/ibt_menu3"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageButton
            android:id="@+id/ibt_menu3"
            android:layout_width="49dp"
            android:layout_height="55dp"
            android:layout_marginStart="24dp"
            android:layout_marginBottom="20dp"
            android:contentDescription="@string/ibt_salir"
            android:onClick="Salir"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toEndOf="@+id/tv_name"
            app:srcCompat="@drawable/salir" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <Button
        android:id="@+id/btn_AddOne"
        android:layout_width="180dp"
        android:layout_height="48dp"
        android:layout_marginStart="115dp"
        android:layout_marginTop="12dp"
        android:text="@string/btn_agregar"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/constraintLayout" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/lv_trabajadores"
        android:layout_width="409dp"
        android:layout_height="566dp"
        android:layout_marginTop="9dp"
        android:scrollbarStyle="insideInset"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_AddOne" />
</androidx.constraintlayout.widget.ConstraintLayout>