<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RecuperarCredenciales">

    <TextView
        android:id="@+id/tv_cambiarclave"
        android:layout_width="217dp"
        android:layout_height="83dp"
        android:layout_marginStart="150dp"
        android:layout_marginTop="160dp"
        android:layout_marginEnd="150dp"
        android:layout_marginBottom="40dp"
        android:text="@string/tv_credenciales"
        android:textAlignment="center"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/et_usuario"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/et_clave"
        android:layout_width="310dp"
        android:layout_height="48dp"
        android:layout_marginStart="100dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="100dp"
        android:layout_marginBottom="24dp"
        android:ems="10"
        android:hint="@string/et_correo"
        android:inputType="textEmailAddress"
        android:textAlignment="center"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/bt_enviar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.523"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/et_usuario" />

    <EditText
        android:id="@+id/et_usuario"
        android:layout_width="310dp"
        android:layout_height="48dp"
        android:layout_marginStart="100dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="100dp"
        android:layout_marginBottom="5dp"
        android:ems="10"
        android:hint="@string/et_usuario"
        android:inputType="number"
        android:textAlignment="center"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/et_clave"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_cambiarclave" />

    <Button
        android:id="@+id/bt_enviar"
        android:layout_width="174dp"
        android:layout_height="54dp"
        android:layout_marginStart="100dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="100dp"
        android:layout_marginBottom="240dp"
        android:onClick="enviar"
        android:text="@string/bt_enviar"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.486"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/et_clave" />

    <ImageButton
        android:id="@+id/ib_salirrec"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="329dp"
        android:layout_marginTop="34dp"
        android:layout_marginEnd="26dp"
        android:layout_marginBottom="646dp"
        android:onClick="volver"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0"
        app:srcCompat="@android:drawable/btn_dialog"
        tools:ignore="SpeakableTextPresentCheck" />
</androidx.constraintlayout.widget.ConstraintLayout>