<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Controlhoras">

    <EditText
        android:id="@+id/tvhoras"
        android:layout_width="80dp"
        android:layout_height="48dp"
        android:layout_marginStart="7dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="7dp"
        android:layout_marginBottom="26dp"
        android:autofillHints=""
        android:inputType="number"
        android:text="Horas"
        android:textAlignment="center"
        app:layout_constraintBottom_toTopOf="@+id/recyclerView"
        app:layout_constraintEnd_toStartOf="@+id/button2"
        app:layout_constraintStart_toEndOf="@+id/splistproy"
        app:layout_constraintTop_toBottomOf="@+id/tv_fecha" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout"
        android:layout_width="405dp"
        android:layout_height="122dp"
        android:layout_marginStart="3dp"
        android:layout_marginEnd="3dp"
        android:layout_marginBottom="22dp"
        app:layout_constraintBottom_toTopOf="@+id/tv_controlh"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/tv_name"
            android:layout_width="296dp"
            android:layout_height="33dp"
            android:layout_marginStart="16dp"
            android:layout_marginBottom="12dp"
            android:text="@string/user_name"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <ImageButton
            android:id="@+id/ibt_menu3"
            android:layout_width="62dp"
            android:layout_height="52dp"
            android:layout_marginStart="15dp"
            android:layout_marginTop="35dp"
            android:contentDescription="@string/ibt_salir"
            android:onClick="Menu"
            app:layout_constraintStart_toEndOf="@+id/tv_name"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/menu_2" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <ImageButton
        android:id="@+id/ibt_cal"
        android:layout_width="66dp"
        android:layout_height="62dp"
        android:layout_marginStart="30dp"
        android:layout_marginTop="65dp"
        android:contentDescription="@string/ibt_calendar"
        android:onClick="Selfecha"
        app:layout_constraintStart_toEndOf="@+id/tv_fecha"
        app:layout_constraintTop_toBottomOf="@+id/constraintLayout"
        app:srcCompat="@drawable/calendar"
        tools:ignore="DuplicateSpeakableTextCheck" />

    <TextView
        android:id="@+id/tv_fecha"
        android:layout_width="292dp"
        android:layout_height="33dp"
        android:layout_marginStart="7dp"
        android:layout_marginTop="16dp"
        android:text="@string/ibt_calendar"
        android:textAlignment="textEnd"
        android:textSize="24sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_controlh" />

    <TextView
        android:id="@+id/tv_controlh"
        android:layout_width="160dp"
        android:layout_height="32dp"
        android:layout_marginStart="125dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="44dp"
        android:layout_marginBottom="15dp"
        android:text="@string/tv_controlh"
        android:textAlignment="center"
        android:textSize="16sp"
        app:layout_constraintBottom_toTopOf="@+id/tv_fecha"
        app:layout_constraintEnd_toStartOf="@+id/ibt_cal"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/constraintLayout" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerView"
        android:layout_width="404dp"
        android:layout_height="379dp"
        android:layout_marginStart="3dp"
        android:layout_marginTop="23dp"
        android:layout_marginEnd="3dp"
        android:layout_marginBottom="16dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button2" />

    <Button
        android:id="@+id/button2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="23dp"
        android:text="Añadir"
        app:layout_constraintBottom_toTopOf="@+id/recyclerView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/tvhoras"
        app:layout_constraintTop_toBottomOf="@+id/ibt_cal" />

    <Spinner
        android:id="@+id/splistproy"
        android:layout_width="200dp"
        android:layout_height="48dp"

        android:layout_marginStart="12dp"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="26dp"

        android:contentDescription="1,2,3"
        android:spinnerMode="dialog"
        app:layout_constraintBottom_toTopOf="@+id/recyclerView"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_fecha" />

</androidx.constraintlayout.widget.ConstraintLayout>